Just some random colors

--- a/views/index.haml
+++ b/views/index.haml
@@ -4,7 +4,7 @@
   %head
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://getbootstrap.com/examples/cover/cover.css">
-  %body
+  %body{:style=>"background-color: #{bg_color}"}
     .site-wrapper
       .site-wrapper-inner
         .cover-container
