--- a/views/index.haml
+++ b/views/index.haml
@@ -4,7 +4,11 @@
   %head
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://getbootstrap.com/examples/cover/cover.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="/js/index.js"></script>
   %body{:style=>"background-color: #{bg_color}"}
+    .background-wrapper
     .site-wrapper
       .site-wrapper-inner
         .cover-container
