--- a/views/index.haml
+++ b/views/index.haml
@@ -2,6 +2,8 @@
 
 %html
   %head
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="initial-scale=1,user-scalable=no">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://getbootstrap.com/examples/cover/cover.css">
     <link rel="stylesheet" href="/css/index.css">
