--- a/views/index.haml
+++ b/views/index.haml
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="/css/index.css">
     <script src="/js/vendor/jquery.js"></script>
     <script src="/js/index.js"></script>
-  %body{:style=>"background-color: #{bg_color}"}
+  %body
     .background-wrapper
     .site-wrapper
       .site-wrapper-inner
         .cover-container
           .inner.cover
             %h1.cover-heading#taskdisplay
-              = task
+              = task.title if task
             %p.lead
               %a.btn.btn-lg.btn-default#taskbutton{:href => "/task"} Press me!
               %span#countdown
