--- a/views/index.haml
+++ b/views/index.haml
@@ -5,7 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="initial-scale=1,user-scalable=no">
     <link rel="stylesheet" href="/css/vendor/bootstrap.css">
-    <link rel="stylesheet" href="http://getbootstrap.com/examples/cover/cover.css">
+    <link rel="stylesheet" href="/css/vendor/cover.css">
     <link rel="stylesheet" href="/css/index.css">
     <script src="/js/vendor/jquery.js"></script>
     <script src="/js/index.js"></script>
@@ -21,4 +21,5 @@
               %a.btn.btn-lg.btn-default#taskbutton{:href => "/task"} Press me!
               %span#countdown
           .mastfoot
+            %a{:href => "https://github.com/juliaguar/random_task", :target => "_blank"} with &#x2661; from berlin
             .inner
