Adding attribution before we forget

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -14,12 +14,12 @@ body {
 	position: relative;
 }
 
-.mastfoot > a {
+.mastfoot a {
 	color: rgba(255,255,255,.5);
 	-webkit-transition: color 0.5s;
 	transition: color 0.5s;
 }
-.mastfoot > a:hover {
+.mastfoot a:hover {
 	color: rgba(255,255,255,.9);
 	text-decoration: none;
 }
