--- a/views/index.haml
+++ b/views/index.haml
@@ -22,4 +22,7 @@
               %span#countdown
           .mastfoot
             %a{:href => "https://github.com/juliaguar/random_task", :target => "_blank"} with &#x2661; from berlin
+            %br
+            %span.glyphicon.glyphicon-camera
+            %span#imagecredits
             .inner
