--- a/views/index.haml
+++ b/views/index.haml
@@ -19,9 +19,12 @@
               = task.title if task
             %p.lead
               %a.btn.btn-lg.btn-default#taskbutton{:href => "/task"} Press me!
-              %span#countdown
+              %span#timer
+                %span.glyphicon.glyphicon-time
+                %span#timer-countdown
           .mastfoot
-            %a{:href => "https://github.com/juliaguar/random_task", :target => "_blank"} with &#x2661; from berlin
+            %a{:href => "https://github.com/juliaguar/random_task", :target => "_blank"} 
+              with <span class="glyphicon glyphicon-heart-empty"></span> from berlin
             %br
             %span.glyphicon.glyphicon-camera
             %span#imagecredits
