--- a/views/index.haml
+++ b/views/index.haml
@@ -4,6 +4,7 @@
   %head
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="initial-scale=1,user-scalable=no">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="/css/vendor/bootstrap.css">
     <link rel="stylesheet" href="/css/vendor/cover.css">
     <link rel="stylesheet" href="/css/index.css">
