--- a/views/index.haml
+++ b/views/index.haml
@@ -11,6 +11,7 @@
     <script src="/js/vendor/jquery.js"></script>
     <script src="/js/index.js"></script>
   %body
+    %audio#bell{:src => "/sound/bell.wav", :preload => "auto"}
     .background-wrapper{ :style => "background-image: url(#{image.url})" }
     .site-wrapper
       .site-wrapper-inner
@@ -30,4 +31,5 @@
             %span.glyphicon.glyphicon-camera
             %span#imagecredits
               = image.credits if image
+            %span <span class="glyphicon glyphicon-bell"></span> <a href=http://creativecommons.org/licenses/by/3.0/" target="_blank">cc-by</a> by <a href="http://www.freesound.org/people/gabstero/" target="_blank">gabstero</a>
             .inner
