damn that small character

--- a/views/index.haml
+++ b/views/index.haml
@@ -31,5 +31,5 @@
             %span.glyphicon.glyphicon-camera
             %span#imagecredits
               = image.credits if image
-            %span <span class="glyphicon glyphicon-bell"></span> <a href=http://creativecommons.org/licenses/by/3.0/" target="_blank">cc-by</a> by <a href="http://www.freesound.org/people/gabstero/" target="_blank">gabstero</a>
+            %span <span class="glyphicon glyphicon-bell"></span> <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">cc-by</a> by <a href="http://www.freesound.org/people/gabstero/" target="_blank">gabstero</a>
             .inner
