fixed #13 odd bug of the plugin..

--- a/views/index.haml
+++ b/views/index.haml
@@ -27,12 +27,12 @@
                 %span.glyphicon.glyphicon-time
                 %span#timer-countdown
           .mastfoot
-            %a{:href => "https://github.com/juliaguar/random_task", :target => "_blank"}
-              with <span class="glyphicon glyphicon-heart-empty"></span> from berlin
-            %br
-            %span.glyphicon.glyphicon-camera
-            %span#imagecredits
-              = image.credits if image
-            %span <span class="glyphicon glyphicon-bell"></span> <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">cc-by</a> by <a href="http://www.freesound.org/people/gabstero/" target="_blank">gabstero</a>
             .inner
-      %div#share
+              %span.share
+              %a{:href => "https://github.com/juliaguar/random_task", :target => "_blank"}
+                with <span class="glyphicon glyphicon-heart-empty"></span> from berlin
+              %br
+              %span.glyphicon.glyphicon-camera
+              %span#imagecredits
+                = image.credits if image
+              %span <span class="glyphicon glyphicon-bell"></span> <a href="http://creativecommons.org/licenses/by/3.0/" target="_blank">cc-by</a> by <a href="http://www.freesound.org/people/gabstero/" target="_blank">gabstero</a>
