Add gulp.js as task runner

--- a/views/index.haml
+++ b/views/index.haml
@@ -5,13 +5,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="stylesheet" href="/vendor/css/bootstrap.css">
+    <link rel="stylesheet" href="/vendor/css/cover.css">
+    <link rel="stylesheet" href="/build/css/index.css">
     <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=entypo">
-    <link rel="stylesheet" href="/css/vendor/bootstrap.css">
-    <link rel="stylesheet" href="/css/vendor/cover.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <script src="/js/vendor/jquery.js"></script>
-    <script src="/js/vendor/share.min.js"></script>
-    <script src="/js/index.js"></script>
+    <script src="/vendor/js/jquery.js"></script>
+    <script src="/vendor/js/share.min.js"></script>
+    <script src="/build/js/index.min.js"></script>
 
   %body
     %audio#bell{:src => "/sound/bell.wav", :preload => "auto"}
